# STInt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: basic-example.cpp
include/: config_table.h  stint.h
src/: config_table.c  stint.c  stint.cpp
test/: main.cpp  test_config_table.cpp  test_stint.cpp
